--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.7",
@@ -19,6 +20,7 @@
     "@react-navigation/stack": "^5.14.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
