--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "bad-words": "^3.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.43.0",
     "react-native-elements": "^3.2.0",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-maps": "0.27.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
